Correção da organização e da estrutura geral das classes do projeto. Adição de novas dependências para a validação dos campos.

--- a/src/main/webapp/WEB-INF/templates/menuSuperior.xhtml
+++ b/src/main/webapp/WEB-INF/templates/menuSuperior.xhtml
@@ -10,8 +10,8 @@
 <h:body>
     <p:toolbar>
         <p:toolbarGroup align="right">
-            <p:commandButton value="Cadastrar-se" style="margin-right: 50px"/>
-            <p:commandButton value="Entrar"/>
+            <p:commandButton value="Cadastrar-se" style="margin-right: 50px" outcome="cadastro.xhtml"/>
+            <p:commandButton value="Entrar" outcome="login.xhtml"/>
         </p:toolbarGroup>
     </p:toolbar>
 </h:body>
