Dependencia do jakarta validation arrumada e redirecionamento para as paginas de login e cadastro

--- a/src/main/webapp/WEB-INF/templates/menuSuperior.xhtml
+++ b/src/main/webapp/WEB-INF/templates/menuSuperior.xhtml
@@ -10,8 +10,8 @@
 <h:body>
     <p:toolbar>
         <p:toolbarGroup align="right">
-            <p:commandButton value="Cadastrar-se" style="margin-right: 50px" outcome="cadastro.xhtml"/>
-            <p:commandButton value="Entrar" outcome="login.xhtml"/>
+            <p:commandButton value="Cadastrar-se" style="margin-right: 50px" action="cadastro.xhtml?faces-redirect=true"/>
+            <p:commandButton value="Entrar" action="login.xhtml?faces-redirect=true"/>
         </p:toolbarGroup>
     </p:toolbar>
 </h:body>
