--- a/src/main/webapp/WEB-INF/templates/pagina.xhtml
+++ b/src/main/webapp/WEB-INF/templates/pagina.xhtml
@@ -3,13 +3,15 @@
 <html lang="pt-BR"
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <h:head>
+    <title/>
 </h:head>
 <h:body>
     <ui:insert name="barraSuperior"/>
     <ui:insert name="barraLateral"/>
-    <ui:insert name="conteudo"/>
+    <div style="margin-top: 25px">
+        <ui:insert name="conteudo"/>
+    </div>
 </h:body>
 </html>
